--- a/portfolio.html
+++ b/portfolio.html
@@ -30,19 +30,32 @@
 		<h4>💻  Tweakers</h4>
 		<p>Bij Tweakers schrijf ik nieuws- en achtergrondartikelen over een breed scala aan techonderwerpen. Hieronder vind je een aantal mooie voorbeelden van mijn werk.
 			<ul style="list-style-type:disc;">
+                                <p><li><a href="https://tweakers.net/reviews/10832/cto-martin-van-den-brink-over-de-obstakels-naar-asmls-euv-alleenheerschappij.html" target = "_blank">Interview: ASML CTO Martin van den Brink over de obstakels naar EUV-heerschappij</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/10836/financiele-topman-asml-ook-zonder-china-raken-we-onze-machines-wel-kwijt.html" target = "_blank">Interview: ASML CFO Roger Dassen: 'Ook zonder China raken we onze machines wel kwijt'</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips op 2nm en halfgeleiderallianties: Hoe de EU haar chipsector wil versterken</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/10836/financiele-topman-asml-ook-zonder-china-raken-we-onze-machines-wel-kwijt.html" target = "_blank">Interview met financiële topman ASML: 'Ook zonder China raken we onze machines kwijt'</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/10654/amerikaans-exportverbod-neemt-chinese-chipsector-in-wurggreep.html" target = "_blank">De chipstrijd tussen Amerika en China: Exportverbod neemt Chinese chipsector in wurggreep</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/10322/de-transistor-van-de-toekomst-imec-over-zijn-roadmap-tot-2036.html" target = "_blank">De transistor van de toekomst: Imec over zijn roadmap tot 2036</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/10534/in-gesprek-met-intel-ceo-pat-gelsinger-idm-20-chipproductie-en-arc-gpus.html" target = "_blank">In gesprek met Intel-ceo Pat Gelsinger: Chipproductie, Arc-gpu's en nieuwe fabrieken</a></li></p>				
-				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">De bewogen geschiedenis van coreboot: ChromeOS gaf bios-alternatief tweede leven</a></li></p>				
-				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux voor gewone mensen' - Interview met Ken VanDine, hoofd Ubuntu Desktop</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/10108/jeremy-soller-van-system76-over-pop_os-de-cosmic-desktop-en-hardware.html" target = "_blank">'Er is een ethos voor elke Linux-distro' - Jeremy Soller van System76 over Pop!_OS en Linux-hardware</a></li></p>		
-				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">'Next-gen wordt fantastisch' - Billy Khan van id Software over id Tech 7, Vulkan, en next-genconsoles</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: Hoe werken Nvidia DLSS, Intel XeSS en AMD FSR 2.0?</a></li></p>				
-			</ul>
+                                <p><li><a href="https://tweakers.net/reviews/11420/de-digital-services-act-is-van-kracht-wat-gaan-we-daarvan-merken.html" target = "_blank">De Digital Services Act is nu van kracht: Wat gaan we daarvan merken?</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/10654/amerikaans-exportverbod-neemt-chinese-chipsector-in-wurggreep.html" target = "_blank">De chipstrijd tussen Amerika en China: Exporverbod neemt Chinese chipsector in wurggreep</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: Hoe werken Nvidia DLSS, Intel XeSS en AMD FSR 2.0?</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/11036/geheugen-voor-een-habbekrats-ddr4-en-ddr5-prijzen-naderen-dieptepunt.html" target = "_blank">Geheugen voor een habbekrats: DDR4- and DDR5-naderen dieptepunt</a></li></p>					
+				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">De bewogen geschiedenis van coreboot: Hoe ChromeOS een bios-alternatief redde</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10108/jeremy-soller-van-system76-over-pop_os-de-cosmic-desktop-en-hardware.html" target = "_blank">'Er is een ethos voor iedere Linux-distro' - Jeremy Soller van System76 over Pop!_OS en Linux-hardware</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux voor gewone mensen' - Interview met Ken VanDine, hoofd van Ubuntu Desktop</a></li></p>			</ul>
 		<br>
 	</div>
+
+		<h4>💰  Microsoft/Activision coverage</h4>
+		<p>Ik heb uitgebreid verslag gedaan over de Activision Blizzard-overname door Microsoft. Hieronder staan enkele highlights:</p>
+			<ul style="list-style-type:disc;">
+				<p><li><a href="https://tweakers.net/reviews/11070/overname-activision-blizzard-in-zwaar-weer-na-britse-blokkade.html" target = "_blank">Waarom het VK de Activision Blizzard-megadeal van Microsoft wil tegenhouden</a></li></p>					
+				<p><li><a href="https://tweakers.net/reviews/11230/strijd-tussen-microsoft-en-ftc-rechtszaak-kan-toekomst-activision-deal-bepalen.html" target = "_blank">De strijd tussen Microsoft en de FTC: Rechtszaak kan toekomst Activision-overname bepalen</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/11252/megadeal-microsoft-en-activision-nadert-de-eindstreep-hoe-gaat-het-nu-verder.html" target = "_blank">Activision Blizzard-deal nadert de eindstreep: Hoe gaat het nu verder?</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/11548/microsoft-heeft-activision-blizzard-overgenomen.html" target = "_blank">Activision Blizzard is nu van Xbox: Microsoft neemt Activision Blizzard over na maandenlange strijd</a></li></p>			
+				<p><li><a href="https://tweakers.net/nieuws/211248/playstation-baas-game-uitgevers-zijn-niet-blij-met-xbox-game-pass.html" target = "_blank">PlayStation-topman: 'Game-uitgevers zijn niet blij met Xbox Game Pass'</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/211290/microsoft-ceo-wil-graag-stoppen-met-xbox-exclusives-maar-legt-schuld-bij-sony.html" target = "_blank">Microsoft-ceo wil graag stoppen met Xbox-exclusives, maar legt schuld bij Sony</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/211324/xbox-baas-besloot-in-2021-alle-bethesda-games-xbox-exclusives-te-maken.html" target = "_blank">Xbox-baas besloot in 2021 alle Bethesda-games Xbox-exclusives te maken</a></li></p>
+		<br>
+	</div>
+
 	
 	<div>
 		<h4>📰	RTV Oost</h4>
