--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
 		<br>
 	</div>
 
-		<h4>💰  Microsoft/Activision coverage</h4>
+		<h4>💰  Microsoft/Activision-overname</h4>
 		<p>Ik heb uitgebreid verslag gedaan over de Activision Blizzard-overname door Microsoft. Hieronder staan enkele highlights:</p>
 			<ul style="list-style-type:disc;">
 				<p><li><a href="https://tweakers.net/reviews/11070/overname-activision-blizzard-in-zwaar-weer-na-britse-blokkade.html" target = "_blank">Waarom het VK de Activision Blizzard-megadeal van Microsoft wil tegenhouden</a></li></p>					
