--- a/portfolio.html
+++ b/portfolio.html
@@ -29,27 +29,41 @@
 	<div>
 		<h4>💻  Tweakers</h4>
 		<p>Bij Tweakers schrijf ik nieuws- en achtergrondartikelen over een breed scala aan techonderwerpen. Hieronder vind je een aantal mooie voorbeelden van mijn werk.
+		<h4>🔬 Halfgeleiders</h4>
 			<ul style="list-style-type:disc;">
                                 <p><li><a href="https://tweakers.net/reviews/10832/cto-martin-van-den-brink-over-de-obstakels-naar-asmls-euv-alleenheerschappij.html" target = "_blank">Interview: ASML CTO Martin van den Brink over de obstakels naar EUV-heerschappij</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/10836/financiele-topman-asml-ook-zonder-china-raken-we-onze-machines-wel-kwijt.html" target = "_blank">Interview: ASML CFO Roger Dassen: 'Ook zonder China raken we onze machines wel kwijt'</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/10836/financiele-topman-asml-ook-zonder-china-raken-we-onze-machines-wel-kwijt.html" target = "_blank">Interview: ASML CFO Roger Dassen: 'Ook zonder China raken we onze machines wel kwijt''</a></li></p>
+                                <p><li><a href="https://www.youtube.com/watch?v=-xL5v-j7KnM" target = "_blank">Video: De chips van 2035 zijn er stiekem al, in België! - Op bezoek bij imec (YouTube)</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/12462/intel-is-overnamedoelwit-voor-qualcomm-wat-is-er-aan-de-hand.html" target = "_blank">'Intel is overnamedoelwit voor Qualcomm' - Wat is er aan de hand?</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/11996/project-beethoven-nederland-steekt-miljarden-in-de-eindhovense-chipsector.html" target = "_blank">Project Beethoven: Nederland stopt miljarden in Eindhovense chipsector</a></li></p>	
+                                <p><li><a href="https://tweakers.net/reviews/12014/van-de-eu-tot-china-de-wereldwijde-strijd-om-chipproductie-veilig-te-stellen.html" target = "_blank">Van de EU naar China: De wereldwijde strijd om chipproductie</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips op 2nm en halfgeleiderallianties: Hoe de EU haar chipsector wil versterken</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/11420/de-digital-services-act-is-van-kracht-wat-gaan-we-daarvan-merken.html" target = "_blank">De Digital Services Act is nu van kracht: Wat gaan we daarvan merken?</a></li></p>	
-				<p><li><a href="https://tweakers.net/reviews/10654/amerikaans-exportverbod-neemt-chinese-chipsector-in-wurggreep.html" target = "_blank">De chipstrijd tussen Amerika en China: Exporverbod neemt Chinese chipsector in wurggreep</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/9912/chiplets-de-grote-toekomst-van-kleine-chips.html" target = "_blank">Chiplets: de grote toekomst van kleine chips</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/12082/tsmc-technology-symposium-2024-voorbij-de-2nm-en-chipstapels-op-waferschaal.html" target = "_blank">TSMC Technology Symposium 2024: Voorbij de 2nm en chipstapels op waferschaal</a></li></p>
+			</ul>
+			<br>
+		<h4>⚙️  General technology coverage</h4>
+			<ul style="list-style-type:disc;">
+                                <p><li><a href="https://tweakers.net/reviews/11420/de-digital-services-act-is-van-kracht-wat-gaan-we-daarvan-merken.html" target = "_blank">The Digital Services Act is van kracht: Wat gaan we daarvan merken?</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/11588/google-en-epic-games-strijden-voor-rechtbank-over-play-store-monopolie.html" target = "_blank">Is de Play Store een illegaal monopolie? Google en Epic Games vechten het uit voor de rechtbank</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/11550/microsoft-over-project-silica-7tb-data-op-een-stukje-glas.html" target = "_blank">Microsoft over Project Silica: 7TB data op een stukje glas</a></li></p>					
 				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: Hoe werken Nvidia DLSS, Intel XeSS en AMD FSR 2.0?</a></li></p>	
-				<p><li><a href="https://tweakers.net/reviews/11036/geheugen-voor-een-habbekrats-ddr4-en-ddr5-prijzen-naderen-dieptepunt.html" target = "_blank">Geheugen voor een habbekrats: DDR4- and DDR5-prijzen naderen dieptepunt</a></li></p>					
-				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">De bewogen geschiedenis van coreboot: Hoe ChromeOS een bios-alternatief redde</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/10108/jeremy-soller-van-system76-over-pop_os-de-cosmic-desktop-en-hardware.html" target = "_blank">'Er is een ethos voor iedere Linux-distro' - Jeremy Soller van System76 over Pop!_OS en Linux-hardware</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux voor gewone mensen' - Interview met Ken VanDine, hoofd van Ubuntu Desktop</a></li></p>			</ul>
-		<br>
+				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">De bewogen geschiedenis van coreboot - ChromeOS gaf bios-alternatief tweede leven</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10108/jeremy-soller-van-system76-over-pop_os-de-cosmic-desktop-en-hardware.html" target = "_blank">'Er is een ethos voor elke Linux-distro' - Jeremy Soller van System76 over Pop_OS en hardware</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux voor gewone mensen' - Interview met Ken VanDine, hoofd Ubuntu Desktop</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10626/proton-ceo-over-privacy-en-big-tech-ons-doel-is-een-privacyecosysteem.html" target = "_blank">'Ons doel is een privacy-ecosysteem' Proton-ceo Andy Yen over privacy en Big Tech</a></li></p>					
+			</ul>
+			<br>
 	</div>
-
+	<div>
 		<h4>💰  Microsoft/Activision-overname</h4>
 		<p>Ik heb uitgebreid verslag gedaan over de Activision Blizzard-overname door Microsoft. Hieronder staan enkele highlights:</p>
 			<ul style="list-style-type:disc;">
 				<p><li><a href="https://tweakers.net/reviews/11070/overname-activision-blizzard-in-zwaar-weer-na-britse-blokkade.html" target = "_blank">Waarom het VK de Activision Blizzard-megadeal van Microsoft wil tegenhouden</a></li></p>					
 				<p><li><a href="https://tweakers.net/reviews/11230/strijd-tussen-microsoft-en-ftc-rechtszaak-kan-toekomst-activision-deal-bepalen.html" target = "_blank">De strijd tussen Microsoft en de FTC: Rechtszaak kan toekomst Activision-overname bepalen</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/11252/megadeal-microsoft-en-activision-nadert-de-eindstreep-hoe-gaat-het-nu-verder.html" target = "_blank">Activision Blizzard-deal nadert de eindstreep: Hoe gaat het nu verder?</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/11548/microsoft-heeft-activision-blizzard-overgenomen.html" target = "_blank">Activision Blizzard is nu van Xbox: Microsoft voltooit miljardenovername na maandenlange strijd</a></li></p>			
+				<p><li><a href="https://tweakers.net/reviews/11548/microsoft-heeft-activision-blizzard-overgenomen.html" target = "_blank">Activision Blizzard is nu van Xbox: Microsoft voltooit miljardenovername na maandenlange strijd</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/12516/activision-een-jaar-onder-microsoft-wat-is-er-sindsdien-gebeurd.html" target = "_blank">Activision een jaar onder Microsoft - Wat is er gebeurd sinds de grootste gamingovername ooit?</a></li></p>									
 				<p><li><a href="https://tweakers.net/nieuws/211248/playstation-baas-game-uitgevers-zijn-niet-blij-met-xbox-game-pass.html" target = "_blank">PlayStation-topman: 'Game-uitgevers zijn niet blij met Xbox Game Pass'</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/211290/microsoft-ceo-wil-graag-stoppen-met-xbox-exclusives-maar-legt-schuld-bij-sony.html" target = "_blank">Microsoft-ceo wil graag stoppen met Xbox-exclusives, maar legt schuld bij Sony</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/211324/xbox-baas-besloot-in-2021-alle-bethesda-games-xbox-exclusives-te-maken.html" target = "_blank">Xbox-baas besloot in 2021 alle Bethesda-games Xbox-exclusives te maken</a></li></p>
