--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                                 <p><li><a href="https://tweakers.net/reviews/12082/tsmc-technology-symposium-2024-voorbij-de-2nm-en-chipstapels-op-waferschaal.html" target = "_blank">TSMC Technology Symposium 2024: Voorbij de 2nm en chipstapels op waferschaal</a></li></p>
 			</ul>
 			<br>
-		<h4>⚙️  General technology coverage</h4>
+		<h4>⚙️  Algemene techverhalen</h4>
 			<ul style="list-style-type:disc;">
                                 <p><li><a href="https://tweakers.net/reviews/11420/de-digital-services-act-is-van-kracht-wat-gaan-we-daarvan-merken.html" target = "_blank">The Digital Services Act is van kracht: Wat gaan we daarvan merken?</a></li></p>
                                 <p><li><a href="https://tweakers.net/reviews/11588/google-en-epic-games-strijden-voor-rechtbank-over-play-store-monopolie.html" target = "_blank">Is de Play Store een illegaal monopolie? Google en Epic Games vechten het uit voor de rechtbank</a></li></p>	
