--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 		<h4>💬 Contact</h4>
 		<p>Je kunt me op de volgende manieren bereiken:
 		<br><br>
-		<a href="mailto:daan@tweakers.net"; title="daan@tweakers.net">E-mail (zakelijk)</a> | 
-		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail (privé)</a> | 
-		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
+		<a href="mailto:daan@tweakers.net"; title="daan@tweakers.net">E-mail</a> | 
+		<a href="https://bsky.app/profile/daanvanmonsjou.nl" target = "_blank">Bluesky</a> | 
 		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
 		<div id="hover-area">
@@ -60,9 +59,9 @@
 			<p>Persbericht sturen? Dat mag gerust naar <code>redactie@tweakers.net</code></p>
 		</div>
 		</div>
-		<br>
-		<p>Wil je gevoelige informatie met me delen, of blijf je gewoon liever anoniem? <a href="/contact">Klik dan hier</a>.</p>
-		<br><br>
+			<br>
+			<p>Wil je gevoelige informatie met me delen, of blijf je gewoon liever anoniem? <a href="/contact">Klik dan hier</a>.</p>
+			<br><br>
 		<hr>
 		</p>
 	</div>
