--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 </head>
 
 <body>
+	<nav>
+        	<a href="https://daanvanmonsjou.nl">Home</a>
+        	<a href="https://daanvanmonsjou.nl/portfolio">Portfolio</a>
+        	<a href="/contact">Contact</a>
+    </nav>
 	<header>
 		<h1>Daan van Monsjou</h1>
 		<h2>Techjournalist bij Tweakers</h2>
