--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         </div>
     </header>
     <main>
-        <section class="about">
-			<h1 class="about-text">Daan van Monsjou</h1>
-		</section>
         <section>
-			<br>
-		</section>
+		<h1>Daan van Monsjou</h1>
+	</section>
+        <section>
+		<br>
+	</section>
         <section>
                 <h2>Over Mij</h2>
                 <p>Ik ben techjournalist bij Tweakers, waar ik verhalen schrijf over de chipsector en computerhardware. Eerder liep ik tweemaal stage en deed ik freelancewerk bij Tweakers. Daarvoor schreef ik onder andere voor Britse computerwebsite OC3D. 
