--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 	<link href="stylesheet.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
 	<link rel="icon" href="images/icon.png">
-	
-	<!-- click to reveal-script, met dank aan Trevor Atlas op codepen.io -->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-	<script type="text/javascript"; src="https://daanvanmonsjou.nl/script.js"></script>
+</head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - Daan van Monsjou</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
