--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- style -->
 	<link href="stylesheet.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
-	<link rel="icon" href="images/icon.png">
+	<link rel="icon" href="img/icon.png">
 </head>
 <head>
     <meta charset="UTF-8">
