--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <main>
-	<h1>Daan van Monsjou</h1><br>
+	<h1>Daan van Monsjou -  Journalist bij Tweakers</h1><br>
         <section>
                 <h2>Over Mij</h2>
                 <p>Ik ben techjournalist bij Tweakers, waar ik verhalen schrijf over de chipsector en computerhardware. Eerder liep ik tweemaal stage en deed ik freelancewerk bij Tweakers. Daarvoor schreef ik onder andere voor Britse computerwebsite OC3D. 
