--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="header-container">
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="https://daanvanmonsjou.nl">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact en tips</a></li>
                 </ul>
