--- a/index.html
+++ b/index.html
@@ -49,5 +49,10 @@
 			<p>Persbericht sturen? Doe maar naar <a href="mailto:redactie@tweakers.net">redactie@tweakers.net</a>
         </section>
     </main>
+	<footer class=footer-container">
+		<ul>
+			<li><a href="https://daanvanmonsjou.com/">View this page in English</a></li>
+		</ul>
+	</footer>
 </body>
 </html>
