--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
     </main>
 	<footer class=footer-container">
-		<ul>
+		<ul class=footer-container">
 			<li><a href="https://daanvanmonsjou.com/">View this page in English</a></li>
 		</ul>
 	</footer>
