--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
         </section>
     </main>
 	<footer class=footer-container">
-		<ul class=footer-container">
-			<li><a href="https://daanvanmonsjou.com/">View this page in English</a></li>
-		</ul>
+		<nav>
+			<ul class=footer-container">
+				<li><a href="https://daanvanmonsjou.com/">View this page in English</a></li>
+			</ul>
+		</nav>
 	</footer>
 </body>
 </html>
