--- a/portfolio.html
+++ b/portfolio.html
@@ -66,6 +66,11 @@
 			<br>
 	</div>
 	
-    </main>
+	</main>
+	<footer class=footer-container">
+		<ul class=footer-container">
+			<li><a href="https://daanvanmonsjou.com/">View this page in English</a></li>
+		</ul>
+	</footer>
 </body>
 </html>
