--- a/contact.html
+++ b/contact.html
@@ -57,5 +57,10 @@
 			<p>Ik neem meestal niet op. Spreek de voice-mail in of stuur me elders een bericht.</p>
 	</section>
     </main>
+	<footer class=footer-container">
+		<ul class=footer-container">
+			<li><a href="https://daanvanmonsjou.com/">View this page in English</a></li>
+		</ul>
+	</footer>
 </body>
 </html>
